[tool.poetry]
name = "twipper"
version = "0.1.0"
description = "Twipper"
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
uvicorn = {extras = ["standard"], version = "0.20.0"}
fastapi = "0.88.0"
pymongo = "4.3.3"
tomli = "2.0.1"
misilelibpy = { path = "./misilelib/misilelib-python" }
requests = "2.28.1"
python-youtube = "0.8.3"
slowapi = "0.1.6"
tomli-w = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
