[tool.poetry]
name = "twipper"
version = "0.1.0"
description = "Twipper"
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
uvicorn = {extras = ["standard"], version = "0.21.0"}
fastapi = "0.88.0"
pymongo = "4.4.0"
tomli = "2.0.1"
misilelibpy = { path = "./misilelib-python" }
requests = "2.28.2"
python-youtube = "0.9.0"
slowapi = "0.1.7"
tomli-w = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
